--- a/ansible/roles/jenkins/tasks/main.yml
+++ b/ansible/roles/jenkins/tasks/main.yml
@@ -6,7 +6,22 @@
       - unzip
       - git
       - java-21-amazon-corretto-devel
+      - python3  
+      - python3-pip  
     state: present
+
+- name: Upgrade pip to latest version
+  pip:
+    name: pip
+    executable: pip3
+    state: latest
+
+- name: Install boto3 and botocore via pip
+  pip:
+    name:
+      - boto3
+      - botocore
+    executable: pip3
 
 - name: Create Maven install directory
   file:
@@ -83,4 +98,3 @@
       - "☕ Java: {{ java_output.stderr }}"
       - "📦 Maven: {{ maven_output.stdout }}"
       - "🔧 Jenkins: {{ jenkins_output.stdout }}"
-
