--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -135,7 +135,7 @@
 
 # (pathlist) Comma separated list of Ansible inventory sources
 
-inventory = inventory
+inventory = ./inventory/inventory_aws_ec2.yml
 
 # (pathspec) Colon separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins={{ ANSIBLE_HOME ~ "/plugins/httpapi:/usr/share/ansible/plugins/httpapi" }}
