--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -708,6 +708,8 @@ become_user=root
 # (string) This setting changes the behaviour of mismatched host patterns, it allows you to force a fatal error, a warning or just ignore it
 ;host_pattern_mismatch=warning
 
+enable_plugins = aws_ec2
+
 # (boolean) If 'true', it is a fatal error when any given inventory source cannot be successfully parsed by any available inventory plugin; otherwise, this situation only attracts a warning.
 
 ;any_unparsed_is_failed=False
