--- a/ansible/inventory/inventory_aws_ec2.yml
+++ b/ansible/inventory/inventory_aws_ec2.yml
@@ -1,11 +1,12 @@
 plugin: aws_ec2
 regions:
-  - ap-south-1       
+  - ap-south-1
 filters:
-  instance-state-name: running   
+  instance-state-name: running
 keyed_groups:
   - key: tags.AnsibleGroup
     prefix: tag
+    separator: "_"
 hostnames:
   - public-ip-address
 compose:
