--- a/ansible/inventory/inventory_aws_ec2.yml
+++ b/ansible/inventory/inventory_aws_ec2.yml
@@ -10,5 +10,5 @@ keyed_groups:
 hostnames:
   - public-ip-address
 compose:
-  ansible_host: public_ip_address
+  ansible_host: public-ip-address
 cache: false
