--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,6 +4,8 @@
 ;action_warnings=True
 
 transport = aws_ssm
+interpreter_python = auto
+timeout = 60
 
 # (list) Accept list of cowsay templates that are 'safe' to use, set to empty list if you want to enable all installed templates.
 ;cowsay_enabled_stencils=bud-frogs, bunny, cheese, daemon, default, dragon, elephant-in-snake, elephant, eyes, hellokitty, kitty, luke-koala, meow, milk, moofasa, moose, ren, sheep, small, stegosaurus, stimpy, supermilker, three-eyes, turkey, turtle, tux, udder, vader-koala, vader, www
@@ -573,7 +575,7 @@ become_user=root
 # However this conflicts with privilege escalation (become). For example, when using 'sudo:' operations you must first disable 'requiretty' in /etc/sudoers on all managed hosts, which is why it is disabled by default.
 # This setting will be disabled if ``ANSIBLE_KEEP_REMOTE_FILES`` is enabled.
 ;pipelining=False
-
+type = aws_ssm
 # (boolean) Pipelining reduces the number of connection operations required to execute a module on the remote server, by executing many Ansible modules without actual file transfers.
 # This can result in a very significant performance improvement when enabled.
 # However this can conflict with privilege escalation (become). For example, when using sudo operations you must first disable 'requiretty' in the sudoers file for the target hosts, which is why this feature is disabled by default.
