--- a/ansible/install_sonar.yml
+++ b/ansible/install_sonar.yml
@@ -1,6 +1,7 @@
 - name: Install and Configure SonarQube
   hosts: tag_sonar
+  connection: aws_ssm
   become: true
-  remote_user: ec2-user
+  gather_facts: false
   roles:
     - sonarqube
