--- a/ansible/inventory/inventory_aws_ec2.yml
+++ b/ansible/inventory/inventory_aws_ec2.yml
@@ -6,8 +6,8 @@ filters:
   tag:Environment: dev   
 
 keyed_groups:
-  - key: tags.Name
-    prefix: tag
+  - key: tags.AnsibleGroup
+    prefix: tag_AnsibleGroup    
 
 hostnames:
   - instance-id
