--- a/ansible/fullstack.yml
+++ b/ansible/fullstack.yml
@@ -1,13 +1,13 @@
 - name: Install and Configure Nexus
   hosts: tag_nexus
-  become: true
-  remote_user: ec2-user
+  connection: aws_ssm
+  gather_facts: false
   roles:
     - nexus
 
 - name: Install and Configure SonarQube
   hosts: tag_sonar
-  become: true
-  remote_user: ec2-user
+  connection: aws_ssm
+  gather_facts: false
   roles:
     - sonarqube
