--- a/ansible/inventory/aws_ec2.yml
+++ b/ansible/inventory/aws_ec2.yml
@@ -1,17 +1,15 @@
 plugin: amazon.aws.aws_ec2
 regions:
   - ap-south-1
-
 filters:
   instance-state-name: running
-
-hostnames:
-  - instance_id
-
+  tag:Name:
+    - sonar
+    - nexus
 keyed_groups:
   - prefix: tag
     key: tags.Name
-    
+hostnames:
+  - public_ip_address
 compose:
-  ansible_host: instance_id
-
+  ansible_host: public_ip_address
